feat(urls): add UrlSummaryResponse DTO, sorted dashboard endpoint, expiryDays support, HttpMethod-scoped security